Fixed bugs caused by updating Icinga
-ModuleController.php
All notifications are now issued using Icinga's internal notification library, which only displays when called action has completely exited, which is slow. This is due to a change in the Z-index of the menu bar, causing custom css notifications to be cutoff.

-kickstart.phmtl, network.phtml, settings.phtml
removed all divs that held custom css notification.

-module.less
removed style for custom notification

-drawDependencies.js, kickstartManager.js, settingsManager.js
removed all jquery showing/hiding custom notifications

-fullscreenMode.js
used jquery to change layout class to 'fullscreen',  Icinga Web 2 no longer does this automatically when entering in 'showFullscreen' into address bar.

--- a/public/css/module.less
+++ b/public/css/module.less
@@ -6,28 +6,7 @@
     float: left;
 }
 
-.modal {
-    display: none;
-    position: fixed;
-    left: 0;
-    top: 96%;
-    width: 100%;
-    height: 100%;
-    padding-left: 3em;
-}
 
-.notification-content {
-    display: block;
-    position: fixed;
-    background-color: #fe6;
-    border-top: 1px solid #c9c9c9;
-    left: 0;
-    top: 96%;
-    width: 100%;
-    height: 100%;
-    padding-left: 3em;
-    padding-top: 0.2em;
-}
 
 .fabs {
     position: fixed;
